--- a/zhenxun_plugins.json
+++ b/zhenxun_plugins.json
@@ -5,8 +5,7 @@
         "version": 0.1,
         "introduction": "汉字Wordle 猜成语",
         "download_url": "https://github.com/yajiwa/zhenxun_plugin_handle/releases/download/v0.1/zhenxun_plugin_handle.zip",
-        "github_url": "https://github.com/yajiwa/zhenxun_plugin_handle",
-        
+        "github_url": "https://github.com/yajiwa/zhenxun_plugin_handle"
     },
     "zhenxun_plugin_ddcheck": {
         "plugin_name": "成分姬",
@@ -14,7 +13,6 @@
         "version": 0.2,
         "introduction": "查询B站关注列表的VTuber成分，并以图片形式发出",
         "download_url": "https://github.com/yajiwa/zhenxun_plugin_ddcheck/releases/download/v0.2/zhenxun_plugin_ddcheck.zip",
-        "github_url": "https://github.com/yajiwa/zhenxun_plugin_ddcheck",
-        
+        "github_url": "https://github.com/yajiwa/zhenxun_plugin_ddcheck"
     }
 }
