--- a/zhenxun_plugins.json
+++ b/zhenxun_plugins.json
@@ -17,10 +17,18 @@
     }, 
     "zhenxun_plugin_petpet": {
         "plugin_name": " 头像表情包", 
-        "author": "MeetWq", 
+        "author": "yajiwa", 
         "version": 0.3, 
         "introduction": "制作头像相关的表情包", 
         "download_url": "https://github.com/yajiwa/zhenxun_plugin_petpet/releases/download/v0.3/zhenxun_plugin_petpet.zip", 
         "github_url": "https://github.com/yajiwa/zhenxun_plugin_petpet"
+    },
+	"zhenxun_arktools": {
+        "plugin_name": " 明日方舟工具箱", 
+        "author": "Number_Sir", 
+        "version": 0.2, 
+        "introduction": "明日方舟工具箱，整合一些有需求的资料查询功能", 
+        "download_url": "https://github.com/NumberSir/zhenxun_arktools/releases/download/v1.0.0/zhenxun_arktools.zip", 
+        "github_url": "https://github.com/NumberSir/zhenxun_arktools"
     }
 }
