--- a/zhenxun_plugins.json
+++ b/zhenxun_plugins.json
@@ -30,5 +30,13 @@
         "introduction": "明日方舟工具箱，整合一些有需求的资料查询功能", 
         "download_url": "https://github.com/NumberSir/zhenxun_arktools/releases/download/v1.0.0/zhenxun_arktools.zip", 
         "github_url": "https://github.com/NumberSir/zhenxun_arktools"
+    },
+	"zhenxun_plugin_memes": {
+        "plugin_name": " 表情包制作", 
+        "author": "yajiwa", 
+        "version": 0.1, 
+        "introduction": "用于制作个性表情包", 
+        "download_url": "https://github.com/yajiwa/zhenxun_plugin_memes/releases/download/v0.1/zhenxun_plugin_memes.zip", 
+        "github_url": "https://github.com/yajiwa/zhenxun_plugin_memes"
     }
 }
