--- a/zhenxun_plugins.json
+++ b/zhenxun_plugins.json
@@ -46,5 +46,13 @@
         "introduction": "用于制作个性表情包",
         "download_url": "https://github.com/yajiwa/zhenxun_plugin_memes/releases/download/v0.1/zhenxun_plugin_memes.zip",
         "github_url": "https://github.com/yajiwa/zhenxun_plugin_memes"
+    },
+    "zhenxun_plugins_TZseries": {
+        "plugin_name": " TZ插件合集",
+        "author": "落灰",
+        "version": 0.1,
+        "introduction": "21点、银行、打劫、福利金、刮刮乐、小人举牌的插件合计",
+        "download_url": "https://github.com/po-lan/zhenxun_plugins_TZseries/releases/download/v0.1/zhenxun_plugins_TZseries.zip",
+        "github_url": "https://github.com/po-lan/zhenxun_plugins_TZseries"
     }
 }
