Feat: update zhenxun_plugin_siyuan to v0.2.2

--- a/zhenxun_plugins.json
+++ b/zhenxun_plugins.json
@@ -36,7 +36,7 @@
         "author": "Zuoqiu-Yingyi",
         "version": 0.21,
         "introduction": "将群转化为思源笔记的收集箱",
-        "download_url": "https://github.com/Zuoqiu-Yingyi/zhenxun-bot-plugin-siyuan/releases/download/v0.2.1/siyuan-v0.2.1.zip",
+        "download_url": "https://github.com/Zuoqiu-Yingyi/zhenxun-bot-plugin-siyuan/releases/download/v0.2.2/zhenxun_plugin_siyuan.zip",
         "github_url": "https://github.com/Zuoqiu-Yingyi/zhenxun-bot-plugin-siyuan"
     },
     "zhenxun_plugin_memes": {
