--- a/zhenxun_plugins.json
+++ b/zhenxun_plugins.json
@@ -31,7 +31,7 @@
         "download_url": "https://github.com/yajiwa/zhenxun_github_sub/releases/download/v0.5/github_sub.zip",
         "github_url": "https://github.com/yajiwa/zhenxun_github_sub"
     },
-	"zhenxun_github_sub": {
+	"zhenxun_plugin_pica": {
         "plugin_name": " 哔咔漫画",
         "author": "CCYellowStar",
         "version": 1.0,
