Feat: add `QQ权重查询` plugin

--- a/zhenxun_plugins.json
+++ b/zhenxun_plugins.json
@@ -38,5 +38,13 @@
         "introduction": "一起看涩涩？",
         "download_url": "https://github.com/CCYellowStar/zhenxun_plugin_pica/releases/download/v1.0/zhenxun_plugin_pica.zip",
         "github_url": "https://github.com/CCYellowStar/zhenxun_plugin_pica"
+    },
+	"zhenxun_plugin_QQweight": {
+        "plugin_name": " QQ权重查询",
+        "author": "xiayingLIULI",
+        "version": 0.1,
+        "introduction": "查询个人QQ号以及真寻的QQ权重分",
+        "download_url": "https://github.com/xiayingLIULI/zhenxun_plugin_QQweight/releases/download/v0.1/QQwright.zip",
+        "github_url": "https://github.com/xiayingLIULI/zhenxun_plugin_QQweight"
     }
 }
