--- a/zhenxun_plugins.json
+++ b/zhenxun_plugins.json
@@ -46,5 +46,13 @@
         "introduction": "查询个人QQ号以及真寻的QQ权重分",
         "download_url": "https://github.com/xiayingLIULI/zhenxun_plugin_QQweight/releases/download/v0.1/QQwright.zip",
         "github_url": "https://github.com/xiayingLIULI/zhenxun_plugin_QQweight"
+    },
+	"zhenxun_check_Minecraft": {
+        "plugin_name": " 我的世界服务器状态查询",
+        "author": "molanp",
+        "version": 1.3,
+        "introduction": "通过套接字链接获取我的世界服务器信息，整理格式并发送",
+        "download_url": "https://github.com/molanp/zhenxun_check_Minecraft/releases/download/v1.3/zhenxun_check_Minecraft-main.zip",
+        "github_url": "https://github.com/molanp/zhenxun_check_Minecraft"
     }
 }
