更新哔咔插件，新增群友市场插件

--- a/zhenxun_plugins.json
+++ b/zhenxun_plugins.json
@@ -34,10 +34,18 @@
 	"zhenxun_plugin_pica": {
         "plugin_name": " 哔咔漫画",
         "author": "CCYellowStar",
-        "version": 1.2,
+        "version": 1.3,
         "introduction": "一起看涩涩？",
-        "download_url": "https://github.com/CCYellowStar/zhenxun_plugin_pica/releases/download/v1.2/zhenxun_plugin_pica.zip",
+        "download_url": "https://github.com/CCYellowStar/zhenxun_plugin_pica/releases/download/v1.3/zhenxun_plugin_pica.zip",
         "github_url": "https://github.com/CCYellowStar/zhenxun_plugin_pica"
+    },
+	"zhenxun_plugin_slave_market": {
+        "plugin_name": " 群友市场",
+        "author": "CCYellowStar",
+        "version": 1.3,
+        "introduction": "群（黑）友（奴）市场",
+        "download_url": "https://github.com/CCYellowStar/zhenxun_plugin_slave_market/releases/download/v1.3/zhenxun_plugin_slave_market.zip",
+        "github_url": "https://github.com/CCYellowStar/zhenxun_plugin_slave_market"
     },
 	"zhenxun_plugin_QQweight": {
         "plugin_name": " QQ权重查询",
