chore(publish): 插件上传流程

--- a/.github/workflows/publish_plugin.yml
+++ b/.github/workflows/publish_plugin.yml
@@ -36,9 +36,43 @@ jobs:
       )
     steps:
       - run: echo "Check passed"
+  reaction:
+    runs-on: ubuntu-latest
+    name: reaction
+    needs: check
+    if: |
+      (
+        github.event_name == 'issue_comment' &&
+        github.event.action == 'created'
+      ) ||
+      (
+        github.event_name == 'issues' &&
+        github.event.action == 'opened'
+      )
+    steps:
+      - name: Generate token
+        id: generate-token
+        uses: tibdex/github-app-token@v2
+        with:
+          app_id: ${{ secrets.APP_ID }}
+          private_key: ${{ secrets.APP_KEY }}
+
+      - name: Reaction on issue
+        if: github.event_name == 'issues'
+        run: |
+          gh api --method POST /repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/reactions -f "content=rocket"
+        env:
+          GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+
+      - name: Reaction on issue comment
+        if: github.event_name == 'issue_comment'
+        run: |
+          gh api --method POST /repos/${{ github.repository }}/issues/comments/${{ github.event.comment.id }}/reactions -f "content=rocket"
+        env:
+          GH_TOKEN: ${{ steps.generate-token.outputs.token }}
   plugin_test:
     runs-on: ubuntu-latest
-    name: nonebot2 plugin test
+    name: zhenxun plugin test
     needs: check
     permissions:
       issues: read
@@ -74,10 +108,40 @@ jobs:
       - name: Test Plugin
         id: plugin-test
         run: |
-          mv scripts/test_plugin.py zhenxun_bot/test_plugin.py
           cd zhenxun_bot
           rm -rf ./zhenxun/plugins/* poetry.lock
           poetry source remove ali
           poetry install --no-root
           poetry run pip install pydantic==1.10
-          poetry run python3 test_plugin.py
+          curl -sSL https://github.com/zhenxun-org/zhenxunflow/releases/latest/download/plugin_test.py | poetry run python -
+  noneflow:
+    runs-on: ubuntu-latest
+    name: noneflow
+    needs: plugin_test
+    steps:
+      - name: Generate token
+        id: generate-token
+        uses: tibdex/github-app-token@v2
+        with:
+          app_id: ${{ secrets.APP_ID }}
+          private_key: ${{ secrets.APP_KEY }}
+
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ steps.generate-token.outputs.token }}
+
+      - name: zhenxunflow
+        uses: docker://ghcr.io/zhenxun-org/zhenxunflow:latest
+        with:
+          config: >
+            {
+              "base": "index",
+              "plugin_path": "plugins.json"
+            }
+        env:
+          PLUGIN_TEST_RESULT: ${{ needs.plugin_test.outputs.result }}
+          PLUGIN_TEST_OUTPUT: ${{ needs.plugin_test.outputs.output }}
+          PLUGIN_TEST_METADATA: ${{ needs.plugin_test.outputs.metadata }}
+          APP_ID: ${{ secrets.APP_ID }}
+          PRIVATE_KEY: ${{ secrets.APP_KEY }}
