--- a/.github/workflows/publish_plugin.yml
+++ b/.github/workflows/publish_plugin.yml
@@ -105,7 +105,7 @@ jobs:
         id: setup-zhenxun
         if: ${{ !startsWith(github.event_name, 'pull_request') }}
         run: |
-          git clone -b dev https://github.com/Hibikier/zhenxun_bot.git
+          git clone -b main https://github.com/Hibikier/zhenxun_bot.git
 
       - name: Test Plugin
         id: plugin-test
